--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL = http://localhost:5005
+REACT_APP_API_URL = https://homestagers.herokuapp.com/
 REACT_APP_ORIGIN=https://homestagers.netlify.app
 REACT_APP_MONGODB_URI=mongodb://localhost:27017/Homestager-server
 REACT_APP_FRONTEND_URL=https://homestagers.netlify.app
