--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_API_URL = https://homestagers.herokuapp.com/
 REACT_APP_ORIGIN=https://homestagers.netlify.app
 REACT_APP_MONGODB_URI=mongodb://localhost:27017/Homestager-server
 REACT_APP_FRONTEND_URL=https://homestagers.netlify.app
+REACT_APP_API_URL = https://homestagers.herokuapp.com
 REACT_APP_CLOUDINARY_URL = https://api.cloudinary.com/v1_1/homestager-react/image/upload
